# habit-tracker-be

./: .gitignore  Cargo.toml  README.md
src/: db.rs  main.rs  utils.rs
src/controllers/: auth_controller.rs  habit_controller.rs  mod.rs
src/models/: habit.rs  mod.rs  user.rs
src/repositories/: user_repository.rs
src/routes/: auth.rs  habits.rs  mod.rs
