
[package]
name = "habit-tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "8.1"
uuid = { version = "1.2", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tower = "0.4"
axum = "0.6"
tokio = { version = "1", features = ["full"] }

