
[package]
name = "habit-tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15"
lazy_static = "1.4"
mongodb = "2.2"
async-once-cell = "2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "8.1"
argon2 = "0.4"
password-hash = "0.4"
rand = "0.8"
uuid = { version = "1.2", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.4", features = ["trace"] }
axum = "0.6"
tokio = { version = "1", features = ["full"] }

